--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,18 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+<!--<dependency>-->
+<!--    <groupId>org.springframework.security</groupId>-->
+<!--    <artifactId>spring-security-core</artifactId>-->
+<!--    <version>6.2.0</version>-->
+<!--</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.example</groupId>-->
+<!--			<artifactId>DemoJv6</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
