--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8082
 spring.datasource.url=jdbc:sqlserver://localhost;database=Fashionstest_Web;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123
-spring.datasource.driverclassname=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = none
