--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.driverclassname=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = none
+spring.h2.console.enabled=false
+spring.security.user.name=tungADMIN
+spring.security.user.password=tung123
+spring.security.user.roles=ADMIN
